--- a/src/components/common/image-slideshow.component.css
+++ b/src/components/common/image-slideshow.component.css
@@ -5,7 +5,32 @@
   flex-direction: column;
 }
 
+.image-slideshow-loading {
+  position: absolute;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: #0C4739;
+  z-index: 2;
+  opacity: 1;
+  -webkit-transition: opacity 1s ease-in-out;
+  -moz-transition: opacity 1s ease-in-out;
+  -o-transition: opacity 1s ease-in-out;
+  -ms-transition: opacity 1s ease-in-out;
+  transition: opacity 1s ease-in-out;
+}
+
+.image-slideshow-loading.hidden {
+  opacity: 0 !important;
+  display: none;
+}
+
+.image-slideshow-loading-spinner {
+  margin: auto;
+}
+
 .image-slideshow-current {
+  background-color: #282c34;
   width: 100% !important;
   height: 70vh !important;
   margin: auto;
@@ -29,36 +54,58 @@
 }
 
 .image-slideshow-buttons {
-  margin: 8px 0;
-  height: 140px;
+  margin-top: 16px;
+  padding-bottom: 16px;
+  height: 148px;
   width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  overflow-x: auto;
   overflow-y: hidden;
+  overflow-x: scroll;
   scroll-behavior: smooth;
 }
 
 .image-slideshow-thumbnail-container {
+  position: relative;
   cursor: pointer;
-  min-height: 100%;
   min-width: 132px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  height: 132px;
   margin: 4px;
+  border-radius: 4px;
+  overflow: hidden;
 }
 
-.image-slideshow-thumbnail-container.active {
+.image-slideshow-thumbnail-container {
   border: 4px solid white;
   border-radius: 4px;
 }
 
 .image-slideshow-thumbnail {
-  object-fit: contain;
-  min-height: 100%;
+  cursor: pointer;
+  border-radius: 4px;
+  margin: 4px;
+  min-height: 132px;
+  height: 132px;
+  min-width: 132px;
+  position: relative;
+  object-fit: cover;
+  object-position: center;
+  overflow: hidden;
+}
+
+.image-slideshow-thumbnail.active {
+  border: 4px solid white;
+  max-height: 124px !important;
+}
+
+.image-slideshow-thumbnail-container > .tall {
+  width: 100% !important;
+  height: auto !important;
   max-height: 132px;
-  width: auto;
+}
+
+.image-slideshow-thumbnail-container > .wide {
+  height: 100% !important;
 }
