--- a/src/components/common/image-slideshow.component.css
+++ b/src/components/common/image-slideshow.component.css
@@ -33,30 +33,92 @@
   background-color: #282c34;
   width: 100% !important;
   height: 70vh !important;
-  margin: auto;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
+.image-slideshow-nav {
+  cursor: pointer;
+  position: absolute;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 70vh;
+  width: 25vw;
+  opacity: 0.5;
+  z-index: 50;
+  -webkit-transition: opacity 0.3s ease-in-out;
+  -moz-transition: opacity 0.3s ease-in-out;
+  -o-transition: opacity 0.3s ease-in-out;
+  -ms-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.image-slideshow-prev {
+  left: 0;
+}
+
+.image-slideshow-next {
+  right: 0;
+}
+
+.image-slideshow-nav.hidden {
+  opacity: 0;
+}
+
+.image-slideshow-nav:hover {
+  opacity: 0.95;
+}
+
+.image-slideshow-nav-button {
+  cursor: pointer;
+  height: 48px;
+  width: 48px;
+  border-radius: 50%;
+  border-width: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+}
+
+.image-slideshow-nav-icon {
+  margin: auto;
+}
+
+.image-slideshow-prev-icon {
+  margin: auto auto auto 5vw;
+}
+
+.image-slideshow-next-icon {
+  margin: auto 5vw auto auto;
+}
+
+
 .image-slide {
-  width: auto !important;
-  height: auto;
-  max-height: 100%;
+  position: absolute;
+  max-width: 100%;
+  max-height: 70vh;
   background-size: cover;
   background-position: center;
+  -webkit-transition: opacity 0.5s ease-in-out;
+  -moz-transition: opacity 0.5s ease-in-out;
+  -o-transition: opacity 0.5s ease-in-out;
+  -ms-transition: opacity 0.5s ease-in-out;
   transition: opacity 0.5s ease-in-out;
   opacity: 0;
 }
 
 .image-slide.active {
-  opacity: 1;
+  opacity: 1 !important;
 }
 
-.image-slideshow-buttons {
+.image-slideshow-thumbnails {
   margin-top: 16px;
-  padding-bottom: 16px;
-  height: 148px;
+  padding-bottom: 24px;
+  height: 172px;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -65,21 +127,6 @@
   overflow-y: hidden;
   overflow-x: scroll;
   scroll-behavior: smooth;
-}
-
-.image-slideshow-thumbnail-container {
-  position: relative;
-  cursor: pointer;
-  min-width: 132px;
-  height: 132px;
-  margin: 4px;
-  border-radius: 4px;
-  overflow: hidden;
-}
-
-.image-slideshow-thumbnail-container {
-  border: 4px solid white;
-  border-radius: 4px;
 }
 
 .image-slideshow-thumbnail {
