--- a/src/components/home/home.component.css
+++ b/src/components/home/home.component.css
@@ -2,6 +2,7 @@
 .home-container {
     width: 100%;
     height: 100%;
+    background-color: #0C4739;
 }
 
 .home-title-container {
@@ -38,7 +39,7 @@
     width: 100%;
     z-index: 0;
     height: calc(1080/1920 * 100vw) !important;
-    max-height: calc(1080/1920 * 100vw) !important;
+    max-height: calc((1080/1920 * 100vw) - 5px) !important;
     top: 112px;
     background-size: cover;
     background-image: url("../../assets/giron-background-clean.jpeg");
@@ -70,6 +71,7 @@
 
 .home-background-video {
     background-color: #0C4739;
+    top: -5px;
     position: relative;
     width: 100%;
     height: 100%;
