--- a/src/components/common/image-slideshow.component.css
+++ b/src/components/common/image-slideshow.component.css
@@ -9,7 +9,7 @@
   position: absolute;
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 70vh;
   background-color: #0C4739;
   z-index: 2;
   opacity: 1;
